[gd_scene load_steps=16 format=2]

[ext_resource path="res://gui/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/images/GUI atlas.png" type="Texture" id=2]
[ext_resource path="res://assets/images/GUI-Hover atlas.png" type="Texture" id=3]
[ext_resource path="res://assets/audio/sounds/rollover_in.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/fonts/Kids Zone.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/audio/sounds/Victory.wav" type="AudioStream" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 1680, 816, 200, 200 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1488, 392, 200, 200 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1496, 400, 176, 176 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 1928, 800, 296, 224 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1752, 440, 304, 232 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1760, 448, 288, 216 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 104, 1088, 1512, 936 )

[sub_resource type="DynamicFont" id=8]
size = 100
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=9]
size = 25
font_data = ExtResource( 5 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="FFBtn" type="TextureButton" parent="."]
margin_left = 30.0
margin_top = 30.0
margin_right = 89.0
margin_bottom = 80.0
texture_normal = SubResource( 1 )
texture_pressed = SubResource( 2 )
texture_hover = SubResource( 3 )
expand = true
stretch_mode = 5

[node name="PauseBtn" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -141.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -490.0
texture_normal = SubResource( 4 )
texture_pressed = SubResource( 5 )
texture_hover = SubResource( 6 )
expand = true
stretch_mode = 5

[node name="HoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="Completion" type="TextureRect" parent="."]
visible = false
margin_left = 130.0
margin_top = 140.0
margin_right = 870.0
margin_bottom = 480.0
texture = SubResource( 7 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="Completion"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -230.0
margin_top = -68.5
margin_right = 195.0
margin_bottom = 68.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 8 )
text = "FAILED :("
align = 1
valign = 1

[node name="NextLevelBtn" type="Button" parent="Completion"]
margin_left = 520.0
margin_top = 350.0
margin_right = 645.0
margin_bottom = 391.0
custom_fonts/font = SubResource( 9 )
text = "Next Level"

[node name="RetryBtn" type="Button" parent="Completion"]
margin_left = 110.0
margin_top = 350.0
margin_right = 198.0
margin_bottom = 391.0
custom_fonts/font = SubResource( 9 )
text = "Retry"

[node name="VictorySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="button_down" from="FFBtn" to="." method="_on_FFBtn_button_down"]
[connection signal="button_up" from="FFBtn" to="." method="_on_FFBtn_button_up"]
[connection signal="mouse_entered" from="FFBtn" to="." method="_on_Btn_focus_entered"]
[connection signal="pressed" from="FFBtn" to="." method="_on_Btn_focus_entered"]
[connection signal="mouse_entered" from="PauseBtn" to="." method="_on_Btn_focus_entered"]
[connection signal="pressed" from="PauseBtn" to="." method="_on_PauseBtn_pressed"]
[connection signal="pressed" from="PauseBtn" to="." method="_on_Btn_focus_entered"]
[connection signal="pressed" from="Completion/NextLevelBtn" to="." method="_on_NextLevelBtn_pressed"]
[connection signal="pressed" from="Completion/RetryBtn" to="." method="_on_RetryBtn_pressed"]
